--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   mask_text_input_formatter: ^1.0.5
   shared_preferences: ^0.4.3
   dash_chat: ^1.0.10
+  intl: ^0.16.1
+  pdf: ^1.4.1
+  printing: ^3.1.0
+  firebase_storage: ^3.0.0
+  path_provider: ^1.4.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/elog.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
