--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   dash_chat: ^1.0.10
   intl: ^0.16.1
   pdf: ^1.4.1
-  printing: ^3.1.0
+  printing: any
   firebase_storage: ^3.0.0
   path_provider: ^1.4.0
 
