--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   shared_preferences: ^0.4.3
   dash_chat: ^1.0.10
   intl: any
-  pdf: ^1.4.1
+  pdf: any
   printing: any
   firebase_storage: ^3.0.0
   path_provider: ^1.4.0
